--- a/002-HTML综合练习/demo/index.html
+++ b/002-HTML综合练习/demo/index.html
@@ -141,7 +141,7 @@
                 <a class="item large img-scale" href="#">
                     <h3 class="name">Adidas制造商</h3>
                     <p class="price" >35元起</p>
-                    <img src="images/brand_01.jpg" alt="">
+                    <img src="images/brand_01.jpg" alt="Adidas制造商">
                 </a>
                 <a class="item large img-scale" href="#">
                     <h3 class="name">Adidas制造商</h3>
@@ -182,11 +182,48 @@
             <div class="div content">
 
                 <div class="product">
-
                     <a href="#" class="image">
-                        <img src="images/new-products_01.png" alt="箱包">
+                        <img src="images/new-products_01.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
                         <span class="tag">2色可选</span>
-                        <img src="images/new-products_01_02.jpg"alt="" class="cover">
+                        <img src="images/new-products_01_02.jpg"alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+                            <span class="attr hot">爆品</span>
+                            <span class="attr">加价购</span>
+                            <span class="attr app-special">app特惠</span>
+                        </p>
+                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                            <a href="#" class="brand-name">新秀丽制造商</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="product">
+                    <a href="#" class="image">
+                        <img src="images/new-products_02.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <span class="tag">2色可选</span>
+                        <img src="images/new-products_02_02.jpg"alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+                            <span class="attr hot">爆品</span>
+                            <span class="attr">加价购</span>
+                            <span class="attr app-special">app特惠</span>
+                        </p>
+                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                            <a href="#" class="brand-name">新秀丽制造商</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="product">
+                    <a href="#" class="image">
+                        <img src="images/new-products_03.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <span class="tag">2色可选</span>
+                        <img src="images/new-products_03_02.jpg"alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
                     </a>
                     <div class="info">
                         <p class="attrs">
@@ -195,6 +232,25 @@
                             <span class="attr app-special">app特惠</span>
                         </p>
                         <h3 class="name ellipsis"><a href="3">24寸 纯PC "铝框" (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                            <a href="#" class="brand-name">新秀丽制造商</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="product">
+                    <a href="#" class="image">
+                        <img src="images/new-products_04.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <span class="tag">2色可选</span>
+                        <img src="images/new-products_04_02.jpg"alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+                            <span class="attr hot">爆品</span>
+                            <span class="attr">加价购</span>
+                            <span class="attr app-special">app特惠</span>
+                        </p>
+                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
                         <p class="price">
                             <span class="price-value">289元</span>
                             <a href="#" class="brand-name">新秀丽制造商</a>
@@ -266,7 +322,8 @@
     $(function () {
         // 消除行内级的空格
         removeSpace('.slider .page-list',
-                    '.product .attrs')
+                    '.product .attrs',
+                     '.produc .price'   )
     })
 </script>
 </html>
