--- a/002-HTML综合练习/demo/index.html
+++ b/002-HTML综合练习/demo/index.html
@@ -131,7 +131,7 @@
                 </div>
 
                 <div class="right">
-                    <span class="more"><a href="#">更多制造商&gt;</a></span>
+                    <span class="more"><a href="#">更多制造商 &gt;</a></span>
                 </div>
             </div>
 
@@ -175,11 +175,11 @@
                 </div>
 
                 <div class="right">
-                    <span class="more"><a href="#">更多新品&gt;</a></span>
+                    <span class="more"><a href="#">更多新品 &gt;</a></span>
                 </div>
             </div>
 
-            <div class="div content">
+            <div class="content clear-fix">
 
                 <div class="product">
                     <a href="#" class="image">
@@ -203,14 +203,11 @@
                 <div class="product">
                     <a href="#" class="image">
                         <img src="images/new-products_02.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
-                        <span class="tag">2色可选</span>
                         <img src="images/new-products_02_02.jpg"alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
                     </a>
                     <div class="info">
                         <p class="attrs">
-                            <span class="attr hot">爆品</span>
                             <span class="attr">加价购</span>
-                            <span class="attr app-special">app特惠</span>
                         </p>
                         <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
                         <p class="price">
@@ -222,7 +219,7 @@
                 <div class="product">
                     <a href="#" class="image">
                         <img src="images/new-products_03.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
-                        <span class="tag">2色可选</span>
+                        <span class="tag">日本制造</span>
                         <img src="images/new-products_03_02.jpg"alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
                     </a>
                     <div class="info">
@@ -234,15 +231,55 @@
                         <h3 class="name ellipsis"><a href="3">24寸 纯PC "铝框" (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
                         <p class="price">
                             <span class="price-value">289元</span>
-                            <a href="#" class="brand-name">新秀丽制造商</a>
                         </p>
                     </div>
                 </div>
                 <div class="product">
                     <a href="#" class="image">
                         <img src="images/new-products_04.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
-                        <span class="tag">2色可选</span>
+                        <span class="tag">6色可选</span>
                         <img src="images/new-products_04_02.jpg"alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+
+                        </p>
+                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <button class="pre arrow-btn"></button>
+            <button class="next arrow-btn"></button>
+
+        </div>
+    </div>
+
+    <!--人气推荐-->
+    <div class="popular">
+        <div class="row">
+            <div class="header clear-fix">
+                <div class="left">
+                    <h2 class="title"><a href="#">人气推荐</a></h2>
+                    <div class="rank">
+                        <a href="#" class="active">编辑推荐</a>
+                        <a href="#">热销总榜</a>
+                    </div>
+                </div>
+
+                <div class="right">
+                    <span class="more"><a href="#">更多推荐 &gt;</a></span>
+                </div>
+            </div>
+
+            <div class="content clear-fix">
+                <div class="product large img-scale">
+                    <a href="#" class="image">
+                        <img src="images/new-products_01.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <span class="tag">2色可选</span>
                     </a>
                     <div class="info">
                         <p class="attrs">
@@ -257,13 +294,110 @@
                         </p>
                     </div>
                 </div>
+                <div class="product img-scale">
+                    <a href="#" class="image">
+                        <img src="images/new-products_02.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+                            <span class="attr">加价购</span>
+                        </p>
+                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                            <a href="#" class="brand-name">新秀丽制造商</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="product img-scale">
+                    <a href="#" class="image">
+                        <img src="images/new-products_03.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <span class="tag">日本制造</span>
+
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+                            <span class="attr hot">爆品</span>
+                            <span class="attr">加价购</span>
+                            <span class="attr app-special">app特惠</span>
+                        </p>
+                        <h3 class="name ellipsis"><a href="3">24寸 纯PC "铝框" (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="product img-scale">
+                    <a href="#" class="image">
+                        <img src="images/new-products_04.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <span class="tag">6色可选</span>
+
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+
+                        </p>
+                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="product img-scale">
+                    <a href="#" class="image">
+                        <img src="images/new-products_02.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+                            <span class="attr">加价购</span>
+                        </p>
+                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                            <a href="#" class="brand-name">新秀丽制造商</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="product img-scale">
+                    <a href="#" class="image">
+                        <img src="images/new-products_03.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <span class="tag">日本制造</span>
+
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+                            <span class="attr hot">爆品</span>
+                            <span class="attr">加价购</span>
+                            <span class="attr app-special">app特惠</span>
+                        </p>
+                        <h3 class="name ellipsis"><a href="3">24寸 纯PC "铝框" (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="product img-scale">
+                    <a href="#" class="image">
+                        <img src="images/new-products_04.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <span class="tag">6色可选</span>
+
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+
+                        </p>
+                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                        </p>
+                    </div>
+                </div>
             </div>
 
-
-            <button class="pre arrow-btn"></button>
-            <button class="next arrow-btn"></button>
-
         </div>
+
     </div>
 </div>
 <div id="footer">
